Revert "Alignment fix"
This reverts commit 6b1ea0f696b5f258152d4a142169d15f55de352b.

--- a/HTML Learn/Tribute Page/buttonbarstyle.css
+++ b/HTML Learn/Tribute Page/buttonbarstyle.css
@@ -1,6 +1,7 @@
 .maindivision
 {
     background-color: azure;
+    width:25%;
 }
 .button
 {
